--- a/src/main/res/layout/activity_cadastro_aluno.xml
+++ b/src/main/res/layout/activity_cadastro_aluno.xml
@@ -30,7 +30,7 @@
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:hint="Disciplina"
-        android:inputType="numberDecimal"
+        android:inputType="text"
         android:layout_marginBottom="8dp" />
 
     <!-- Botões -->
