--- a/src/main/res/layout/inicio.xml
+++ b/src/main/res/layout/inicio.xml
@@ -24,12 +24,12 @@
             android:textStyle="bold" />
 
         <EditText
-            android:id="@+id/editUsername"
+            android:id="@+id/editEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
             android:backgroundTint="#2196F3"
-            android:hint="Usuário"
+            android:hint="E-mail"
             android:padding="12dp" />
 
         <EditText
